# highz-filterbank

./: .gitignore  LICENSE  Makefile  Pins.txt  Pipfile  README.md  pyproject.toml  requirements.txt  run_data_viewer.sh  run_live_viewer.sh  setup.py
characterization/: README.md  metadata_template.json
characterization/log_detector/: calibration_20260226.csv  calibration_20260226_fit_parameters.txt  calibration_20260226_lookup_table.csv  plot_calibration.py
characterization/s_parameters/: MEASUREMENT_GUIDE.md
data_aquisition/: ADHAT_c_subroutine_NO_SOCKET.c
docs/: CYCLE_CONTROLLER.md  DATA_FORMAT.md  HARDWARE.md  LO_FREQUENCY_SYNC_FIX.md  README.md
scripts/: AUTOSTART_README.md  STATE2_SEQUENTIAL_OPERATION.md  SYNCHRONIZED_OPERATION.md  batch_waterfall.sh  consolidate_all.sh  create_animations.py  filterbank_aliases.sh  remove_autostart.sh  run_synchronized_sweep.sh  setup_autostart.sh  start_continuous_acq.sh  status_continuous_acq.sh  stop_continuous_acq.sh  test_acq.sh  test_cycle_control.sh
src/: Pins.txt
src/calibration/: calibCode_v2.c  filterSweep.c
src/data_aquisition/: ADHAT_c_subroutine_NO_SOCKET.c  continuous_acq.c  cycle_control.c  manual_state_ctrl.c  manual_state_ctrl.h  state_ctrl.c
src/highz_filterbank/: __init__.py
src/instrument/: continuous_acq.c  cycle_control.c  filterSweep.c  highz_common.h
src/legacy/: __init__.py  (+1 more)
tools/: FILTER_VIEWER_README.md  compare_filter_responses.py  example_log_detector_usage.py  plot_lo_power.py  plot_lo_power_with_errors.py  test_filter_detector_calibration.py  view_filter_responses.py
(+79 files in other folders)
