[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highz-filterbank"
version = "0.1.0"
description = "Tools for high-z filterbank data acquisition, viewing, and analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"matplotlib",
	"astropy",
	"dash",
	"plotly",
	"tqdm",
	"scikit-rf",
]

[project.optional-dependencies]
dev = [
	"jupyter",
	"ipykernel",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]